Added a new project to the project section along with a dedicated detail page

--- a/projects.html
+++ b/projects.html
@@ -179,6 +179,23 @@
               </div>
           </div>
 
+            <!-- Expense Tracker -->
+            <div class="col-md-6 col-lg-4 mb-4">
+              <div class="card bg-secondary text-light shadow-lg">
+                  <img src="./img/expense-tracker.png" class="card-img-top" alt="Expense Tracker App" />
+                  <div class="card-body text-center">
+                      <h5 class="card-title">📊💰 Expense Tracker App</h5>
+                      <p class="card-text technology"><strong>🖥️ HTML | 🎨 CSS | ⚡ Bootstrap | 📜 JavaScript | 🗂️ Local Storage</strong></p>
+                      <p class="card-text">An intuitive web-based Expense Tracker that helps users efficiently manage their spending by adding, editing, and deleting expenses.</p>
+                      <div class="d-flex justify-content-center gap-2 mt-2">
+                          <a href="./ptoject-html/expense.html" class="btn btn-outline-info">🔍 See Details</a>
+                          <a href="https://github.com/roddazad/expence-tracker-app" class="btn btn-outline-info" target="_blank">💻 View Code</a>
+                          <a href="https://roddazad.github.io/expence-tracker-app/" class="btn btn-outline-light" target="_blank">🌐 Live Demo</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
           <!-- TravelGo -->
           <div class="col-md-6 col-lg-4 mb-4">
             <div class="card bg-secondary text-light shadow-lg">
@@ -359,7 +376,7 @@
                 <h5 class="card-title">📝✅ To-Do List</h5>
                 <p class="card-text technology">
                   <strong
-                    >🖥️ HTML | 🎨 CSS | ⚡ Bootstrap | 🗂️ Local Storage</strong
+                    >🖥️ HTML | 🎨 CSS | ⚡ Bootstrap | 🗂️ Local Storage | 📜 JavaScript</strong
                   >
                 </p>
                 <p class="card-text">
@@ -469,7 +486,7 @@
             </div>
           </div>
        
-          <!-- Project Number 12 -->
+        
         </div>
       </div>
     </section>
