added the new project taskFlow to the portfolio

--- a/projects.html
+++ b/projects.html
@@ -119,6 +119,27 @@
               </div>
           </div>
 
+          <!-- TaskFlow App -->
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="card bg-secondary text-light shadow-lg">
+            <img src="./img/taskFlow.jpg" class="card-img-top" alt="TaskFlow App" />
+            <div class="card-body text-center">
+              <h5 class="card-title">📋🚀 TaskFlow – Project Dashboard</h5>
+              <p class="card-text technology">
+                <strong>🖥️ HTML | 🎨 CSS | ⚡ Bootstrap | 📜 JavaScript | 🗂️ Local Storage</strong>
+              </p>
+              <p class="card-text">
+                A Trello-style task manager with login, priority tags, drag-and-drop, and real-time due date indicators.
+              </p>
+              <div class="d-flex justify-content-center gap-2 mt-2">
+                <a href="./ptoject-html/task-flow.html" class="btn btn-outline-info">🔍 See Details</a>
+                <a href="https://github.com/roddazad/project-management-dashboard" class="btn btn-outline-info" target="_blank">💻 View Code</a>
+                <a href="https://roddazad.github.io/project-management-dashboard/" class="btn btn-outline-light" target="_blank">🌐 Live Demo</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
           <!-- Weather App -->
           <div class="col-md-6 col-lg-4 mb-4">
             <div class="card bg-secondary text-light shadow-lg">
