--- a/index.html
+++ b/index.html
@@ -108,22 +108,33 @@
                   </div>
                   <!-- Project 2 -->
                   <div class="carousel-item">
-                      <div class="card bg-secondary text-light shadow-lg">
-                          <img src="./img/mediterranean-delight.png" alt="Mediterranean Restaurant" class="card-img-top">
-                          <div class="card-body text-center">
-                              <h5 class="card-title">Mediterranean Delight – A Taste of the Mediterranean Experience</h5>
-                              <p class="card-text">A visually stunning, responsive restaurant website...</p>
-                              <div class="collapse" id="mediterraneanDetails">
-                                  <p class="card-text">Built with HTML, CSS, Bootstrap, and JavaScript, this website offers an immersive online experience. It features an elegant hero section, interactive carousel showcasing specialties, a structured menu page with appetizing imagery, and a reservation modal for seamless booking.</p>
-                              </div>
-                              <div class="d-flex justify-content-center gap-2 mt-2">
-                              <button class="btn btn-outline-info mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#mediterraneanDetails" aria-expanded="false">See Details</button>
-                              <a href="https://github.com/roddazad/mediterranean-delight" class="btn btn-outline-info mt-2" target="_blank">View Code</a>
-                              <a href="https://roddazad.github.io/mediterranean-delight/" class="btn btn-outline-light mt-2" target="_blank">Live Demo</a>
+                    <div class="card bg-secondary text-light shadow-lg">
+                        <img src="./img/taskFlow.jpg" alt="TaskFlow Project" class="card-img-top">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">📋🚀 TaskFlow – Your Personal Project Management Dashboard</h5>
+                            <p class="card-text">An interactive Trello-style dashboard that lets users manage projects with authentication, drag-and-drop, due dates, and more.</p>
+                            <div class="collapse" id="taskFlowDetails">
+                                <p class="card-text">
+                                    <strong>TaskFlow</strong> is a full-featured project management app built with HTML, CSS, Bootstrap, and JavaScript. Users can sign up and log in to access a personalized dashboard where they can add, edit, and delete tasks with ease. Tasks can be categorized by priority (high, medium, low) and are color-coded for clarity. 
+                                </p>
+                                <p class="card-text">
+                                    With drag-and-drop functionality, intuitive UI, and real-time feedback for due dates, TaskFlow offers a smooth and efficient user experience. It supports Local Storage to preserve task state and includes intelligent visual indicators when deadlines approach.
+                                </p>
+                                <p class="card-text">
+                                    🔐 Authentication is built in using local storage tokens, allowing personalized dashboards. Future enhancements will include real-time syncing with a backend, subtasks, and collaborative features.
+                                </p>
+                                <p class="card-text">
+                                    This project highlights advanced JavaScript handling, clean UI/UX principles, and state management—demonstrating a solid grasp of front-end engineering and thoughtful product design.
+                                </p>
                             </div>
-                          </div>
-                      </div>
-                  </div>
+                            <div class="d-flex justify-content-center gap-2 mt-2">
+                                <button class="btn btn-outline-info mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#taskFlowDetails" aria-expanded="false">See Details</button>
+                                <a href="https://github.com/roddazad/project-management-dashboard" class="btn btn-outline-info mt-2" target="_blank">💻 View Code</a>
+                                <a href="https://roddazad.github.io/project-management-dashboard/" class="btn btn-outline-light mt-2" target="_blank">🌐 Live Demo</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                   
                   <!-- Project 3 -->
                   <div class="carousel-item">
