On carousel change the See Details button to Read More

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                   <p class="card-text">The Job Board App is a sleek and responsive web application designed to simplify job searching. It dynamically fetches job listings from the JSearch API and provides users with advanced filtering options based on job title, location, salary, experience level, and industry. Users can also save jobs to a personal list for later reference, ensuring an efficient job-hunting experience. With a modern UI, seamless navigation, and responsive design, the app offers a user-friendly platform for exploring job opportunities. Future enhancements include user authentication for cross-device saved jobs, a job application tracker, and AI-powered job recommendations based on user preferences.</p>
                               </div>
                               <div class="d-flex justify-content-center gap-2 mt-2">
-                                  <button class="btn btn-outline-info mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#jobBoardDetails" aria-expanded="false">See Details</button>
+                                  <button class="btn btn-outline-info mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#jobBoardDetails" aria-expanded="false">Read More</button>
                                   <a href="https://github.com/roddazad/job-board-app" class="btn btn-outline-info mt-2" target="_blank">View Code</a>
                                   <a href="https://roddazad.github.io/job-board-app/" class="btn btn-outline-light mt-2" target="_blank">Live Demo</a>
                               </div>
@@ -128,7 +128,7 @@
                                 </p>
                             </div>
                             <div class="d-flex justify-content-center gap-2 mt-2">
-                                <button class="btn btn-outline-info mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#taskFlowDetails" aria-expanded="false">See Details</button>
+                                <button class="btn btn-outline-info mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#taskFlowDetails" aria-expanded="false">Read More</button>
                                 <a href="https://github.com/roddazad/project-management-dashboard" class="btn btn-outline-info mt-2" target="_blank">💻 View Code</a>
                                 <a href="https://roddazad.github.io/project-management-dashboard/" class="btn btn-outline-light mt-2" target="_blank">🌐 Live Demo</a>
                             </div>
@@ -147,7 +147,7 @@
                                   <p class="card-text">TravelGo is a responsive travel booking website built with HTML, CSS, and Bootstrap. It features a hero section, featured destinations, curated packages, and Google Maps integration.</p>
                               </div>
                               <div class="d-flex justify-content-center gap-2 mt-2">
-                              <button class="btn btn-outline-info mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#travelDetails" aria-expanded="false">See Details</button>
+                              <button class="btn btn-outline-info mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#travelDetails" aria-expanded="false">Read More</button>
                               <a href="https://github.com/roddazad/travel-destination-website" class="btn btn-outline-info mt-2" target="_blank">View Code</a>
                               <a href="https://roddazad.github.io/travel-destination-website/" class="btn btn-outline-light mt-2" target="_blank">Live Demo</a>
                             </div>
@@ -165,7 +165,7 @@
                                   <p class="card-text">The Movie Search App is a dynamic and responsive web application that allows users to search for movies, explore trending and classic films, and manage a personal watchlist. Built with HTML, CSS, JavaScript, and Bootstrap, and powered by The Movie Database (TMDb) API, the app delivers real-time movie data with an intuitive and engaging UI. Users can instantly search for any movie, browse trending and classic films by decade, and save favorites to a watchlist using Local Storage, with the option to remove them at any time. The app features a cinema-style dark mode, smooth animations, and responsive design, ensuring a seamless user experience. Planned future enhancements include a Movie Details Page, allowing users to click on a result to see detailed information like cast, ratings, and description, along with genre-based filtering and user authentication for cross-device watchlist syncing. This project showcases my front-end development skills, including API integration, UI/UX design, and state management, demonstrating my ability to create interactive and user-friendly web applications. 🚀🎬</p>
                               </div>
                               <div class="d-flex justify-content-center gap-2 mt-2">
-                              <button class="btn btn-outline-info mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#financeDetails" aria-expanded="false">See Details</button>
+                              <button class="btn btn-outline-info mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#financeDetails" aria-expanded="false">Read More</button>
                               <a href="https://github.com/roddazad/movie-search" class="btn btn-outline-info mt-2" target="_blank">View Code</a>
                               <a href="https://roddazad.github.io/movie-search/" class="btn btn-outline-light mt-2" target="_blank">Live Demo</a>
                             </div>
